--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <br />
 	<a href="serverinfo.html"><img src="knappar/serverinfoknapp.png" style="border-style:none" /></a>
 	<a href="http://worldoftuvstarr.freeforums.org/"><img src="knappar/Forumknapp1.jpg" style="border-style: none"/></a>
-    <a href="howtoconnect.html"><img src="howtoconnectknapp.png" style="border-style:none" /></a>
+    <a href="howtoconnect.html"><img src="knappar/howtoconnectknapp.png" style="border-style:none" /></a>
     <a href="donaterewards.html"><img src="knappar/donaterewardsknapp.png" style="border-style:none" /></a>
     <br />
     <br />
